# Labo-S4

./: .gitignore
MCR/Labo1/: Thumbs.db  uml.sly
MCR/Labo1/src/: AnalogicChrono.java  Chrono.java  DigitalChrono.java  JChrono.java  JClockView.java  Observator.java  Subject.java  main.java
MCR/Labo2/: classes.sly
MCR/Labo2/src/: Bouncer.java  Displayer.java  Singleton.java  main.java
MCR/Labo3/: classes.sly  uml.sly  uml_new.sly
MCR/Labo3/src/: Bouncable.java  BounceApp.java  CircleFactory.java  Displayer.java  Form.java  JBounce.java  Renderable.java  Renderer.java  ShapeFactory.java  SquareFactory.java
PCO/Labo2/labo2_ressources/: PCO_-_labo2_resource.rc  etape1.cpp  prime.cpp  primeThread.h
PCO/Labo3/build-banditmanchot-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
PCO/Labo3/ressources/: banditmanchot.pro  bmmanager.cpp  bmmanager.h
PCO/Labo4/QtrainSim/: QtrainSim.pro
PCO/Labo4/build-QtrainSim-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
PCO/Labo5/build-labo_velo-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
PCO/Labo5/labo_velo_people/: CMakeLists.txt
PCO/Labo5/labo_velo_people/src/: main.cpp
PCO/Labo6/code_student/: matrix.pro
POO2/13 Matrices/: BinaryMatrice.cpp  BinaryMatrice.h  CMakeLists.txt  Test.cpp  Test.h  Thumbs.db  main.cpp
POO2/15 List/: CMakeLists.txt  List.h  main.cpp
POO2/16 Riviere/: Bank.h  Boat.cpp  Boat.h  CMakeLists.txt  Container.cpp  Container.h  Controller.cpp  Controller.h  Dispatcher.cpp  Dispatcher.h  Person.h  main.cpp  uml.sly
POO2/16 Riviere/Cont/: Bank.cpp  Bank.h  Boat.cpp  Boat.h  Container.cpp  Container.h
POO2/16 Riviere/Pers/: Child.cpp  Child.h  Cop.cpp  Cop.h  FamilyMember.cpp  FamilyMember.h  Parent.cpp  Parent.h  Person.cpp  Person.h  Thief.cpp  Thief.h  Voleur.cpp  Voleur.h
SER/Labo1/: Documentation.docx  Exemple.json  Labo01.dtd  Labo01.xsd  dtd_sample.xml  exemple.xml  json_sample.json  xsd_sample.xml
SER/Labo2/: Documentation.docx
(+110 files in other folders)
